# ReflectAO

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
docs/: frame_metadata.md  relevant_fields.md
reflectao/: __init__.py  build_observation_table.py  config.py  kapa_utils.py  maos_utils.py  run_sim.py  schema.py  telemetry_utils.py
reflectao/observation/: __init__.py  fits_header.py  frame_metadata.py
reflectao/observation/instruments/: __init__.py  nirc2.py  osiris.py
scripts/: dump_fits_header.py  find_frames_with_darks_LTAO.py  find_frames_with_good_LTAO_telemetry.py  get_all_ocam2k_read_stats.py  print_maos_strehl.py  run_first_sim.py  run_one_sim.py
tests/: test_build_observation_table.py  test_frame_metadata.py  test_get_r_band_mag.py  test_nirc2_header.py  test_osiris_header.py  test_schema.py
